// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. front lead two no pic and two - small - landscape 1`] = `<VerticalLayout />`;

exports[`2. front lead two no pic and two - medium - landscape 1`] = `
<TabletContentContainer
  style={
    Object {
      "paddingTop": 15,
    }
  }
>
  <VerticalLayout
    style={
      Object {
        "width": [Function],
      }
    }
  />
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": [Function],
      }
    }
  >
    <Text>
      support-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": [Function],
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        support-2
      </Text>
    </View>
  </View>
</TabletContentContainer>
`;

exports[`3. front lead two no pic and two - wide - landscape 1`] = `
<TabletContentContainer
  style={
    Object {
      "paddingTop": 15,
    }
  }
>
  <VerticalLayout
    style={
      Object {
        "width": [Function],
      }
    }
  />
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": [Function],
      }
    }
  >
    <Text>
      support-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": [Function],
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        support-2
      </Text>
    </View>
  </View>
</TabletContentContainer>
`;

exports[`4. front lead two no pic and two - huge - landscape 1`] = `
<TabletContentContainer
  style={
    Object {
      "paddingTop": 15,
      "width": 1180,
    }
  }
>
  <VerticalLayout
    style={
      Object {
        "width": [Function],
      }
    }
  />
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": [Function],
      }
    }
  >
    <Text>
      support-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": [Function],
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        support-2
      </Text>
    </View>
  </View>
</TabletContentContainer>
`;

exports[`5. front lead two no pic and two - small - portrait 1`] = `<VerticalLayout />`;

exports[`6. front lead two no pic and two - medium - portrait 1`] = `
<TabletContentContainer
  style={
    Object {
      "marginHorizontal": 20,
      "marginTop": 20,
    }
  }
>
  <VerticalLayout
    style={
      Object {
        "width": [Function],
      }
    }
  />
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <VerticalLayout
    style={
      Object {
        "width": [Function],
      }
    }
  />
</TabletContentContainer>
`;

exports[`7. front lead two no pic and two - wide - portrait 1`] = `
<TabletContentContainer
  style={
    Object {
      "marginHorizontal": 20,
      "marginTop": 20,
    }
  }
>
  <VerticalLayout
    style={
      Object {
        "width": [Function],
      }
    }
  />
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <VerticalLayout
    style={
      Object {
        "width": [Function],
      }
    }
  />
</TabletContentContainer>
`;

exports[`8. front lead two no pic and two - huge - portrait 1`] = `
<TabletContentContainer
  style={
    Object {
      "marginHorizontal": 20,
      "marginTop": 20,
    }
  }
>
  <VerticalLayout
    style={
      Object {
        "width": [Function],
      }
    }
  />
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <VerticalLayout
    style={
      Object {
        "width": [Function],
      }
    }
  />
</TabletContentContainer>
`;
